# PDA

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
examples/: APf-2.txt  APf-viernes.txt  APv-2.txt  APv-jueves.txt  input-jueves.txt  input.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  pda.cpp  pda.hpp  pdabuilder.cpp  pdabuilder.hpp
src/datastructs/: CMakeLists.txt  alphabet.cpp  alphabet.hpp  stack.cpp  stack.hpp  tape.cpp  tape.hpp
src/pda/: CMakeLists.txt  pda.cpp  pda.hpp  pdabuilder.cpp  pdabuilder.hpp
src/state/: CMakeLists.txt  alphabet.cpp  alphabet.hpp  pda.cpp  pda.hpp  stack.cpp  stack.hpp  state.cpp  state.hpp  tape.cpp  tape.hpp  transition.cpp  transition.hpp  utils.cpp  utils.hpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_example.cpp
tests/datastructs/: CMakeLists.txt  test_alphabet.cpp  test_stack.cpp  test_tape.cpp
tests/state/: CMakeLists.txt  test_pda.cpp  test_state.cpp  test_tape.cpp  test_transition.cpp
tests/utils/: CMakeLists.txt  test_utils.cpp
